--- a/src/Microsoft.Win32.Registry/ref/Microsoft.Win32.Registry.csproj
+++ b/src/Microsoft.Win32.Registry/ref/Microsoft.Win32.Registry.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <ProjectGuid>{EEC02D4E-217E-4B4D-A7DA-5038FAD44A18}</ProjectGuid>
     <IsPartialFacadeAssembly Condition="'$(TargetsNetFx)' == 'true'">true</IsPartialFacadeAssembly>
-	<Configurations>netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
+    <Configurations>net461-Debug;net461-Release;netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Microsoft.Win32.Registry.cs" />
