--- a/src/System.Data.Odbc/ref/System.Data.Odbc.csproj
+++ b/src/System.Data.Odbc/ref/System.Data.Odbc.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <ProjectGuid>{D589374B-3331-4660-8DFB-512D66F8EC63}</ProjectGuid>
     <IsPartialFacadeAssembly Condition="'$(TargetsNetFx)' == 'true'">true</IsPartialFacadeAssembly>
-    <Configurations>netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
+    <Configurations>net461-Debug;net461-Release;netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="System.Data.Odbc.cs" />
