--- a/src/System.Diagnostics.EventLog/ref/System.Diagnostics.EventLog.csproj
+++ b/src/System.Diagnostics.EventLog/ref/System.Diagnostics.EventLog.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <IsPartialFacadeAssembly Condition="'$(TargetsNetFx)' == 'true'">true</IsPartialFacadeAssembly>
     <ProjectGuid>{F405C42E-EF6F-4404-80FD-3B87E216707C}</ProjectGuid>
-    <Configurations>netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
+    <Configurations>net461-Debug;net461-Release;netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="System.Diagnostics.EventLog.cs" />
