--- a/src/System.Threading.AccessControl/ref/System.Threading.AccessControl.csproj
+++ b/src/System.Threading.AccessControl/ref/System.Threading.AccessControl.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <ProjectGuid>{C2B1A23B-16F9-4015-BE3C-DD871A7C108D}</ProjectGuid>
     <IsPartialFacadeAssembly Condition="'$(TargetsNetFx)' == 'true'">true</IsPartialFacadeAssembly>
-    <Configurations>netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
+    <Configurations>net461-Debug;net461-Release;netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="System.Threading.AccessControl.cs" />
