Factor out large generic additions in System.Linq
New generic types in System.Linq are causing significant size-on-disk increases in AOT builds.  This change addresses some of them:

- The many implementations of IPartition and IIListProvider are causing significant binary size increases for AOT.  I've factored out the majority of those large changes to only be used in a netcoreapp build, not in a uap build.  There are still code paths that test whether an object is IPartition or IIListProvider, but there are no types now in the UAP build that implement them.
- As part of this, I replaced several places where `EmptyPartition<TResult>.Instance` was being used directly to implement an `IEnumerable<T>`, changed them to use `Enumerable.Empty<T>`, and then changed `Enumerable.Empty<T>` so that on netcoreapp it returns `EmptyPartition<TResult>.Instance`, and on uap it returns `Array.Empty<T>`.  This also means now that code paths lighting-up on partitions will also light-up on `Enumerable.Empty<T>`.  It also means that I changed the empty partition's `IEnumerator.Reset` method to be a nop instead of throwing, to match the same behavior as array's `IEnumerator.Reset`.
- LargeArrayBuilder uses T[][], which introduces lots of new array types and corresponding interface instantiations, helper types, etc.  I've specialized LargeArrayBuilder in the UAP build to just be a thin wrapper around ArrayBuilder; we still end up with unnecessary instantiations of LargeArrayBuilder, but they're relatively small, and it saves everything to do with those T[][] instantiations.

--- a/src/System.Linq/src/System.Linq.csproj
+++ b/src/System.Linq/src/System.Linq.csproj
@@ -10,6 +10,37 @@
       <TargetGroup>netcoreapp</TargetGroup>
     </ContractProject>
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp'">
+    <Compile Include="System\Linq\AppendPrepend.netcoreapp.cs" />
+    <Compile Include="System\Linq\Concat.netcoreapp.cs" />
+    <Compile Include="System\Linq\DefaultIfEmpty.netcoreapp.cs" />
+    <Compile Include="System\Linq\Distinct.netcoreapp.cs" />
+    <Compile Include="System\Linq\Enumerable.netcoreapp.cs" />
+    <Compile Include="System\Linq\Grouping.netcoreapp.cs" />
+    <Compile Include="System\Linq\Lookup.netcoreapp.cs" />
+    <Compile Include="System\Linq\OrderedEnumerable.netcoreapp.cs" />
+    <Compile Include="System\Linq\Partition.netcoreapp.cs" />
+    <Compile Include="System\Linq\Range.netcoreapp.cs" />
+    <Compile Include="System\Linq\Repeat.netcoreapp.cs" />
+    <Compile Include="System\Linq\Reverse.netcoreapp.cs" />
+    <Compile Include="System\Linq\Select.netcoreapp.cs" />
+    <Compile Include="System\Linq\SelectMany.netcoreapp.cs" />
+    <Compile Include="System\Linq\Skip.netcoreapp.cs" />
+    <Compile Include="System\Linq\Take.netcoreapp.cs" />
+    <Compile Include="System\Linq\Union.netcoreapp.cs" />
+    <Compile Include="System\Linq\Where.netcoreapp.cs" />
+    <Compile Include="$(CommonPath)\System\Collections\Generic\LargeArrayBuilder.netcoreapp.cs">
+      <Link>System\Collections\Generic\LargeArrayBuilder.netcoreapp.cs</Link>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetGroup)' == 'uap'">
+    <Compile Include="System\Linq\Enumerable.uap.cs" />
+    <Compile Include="System\Linq\Skip.uap.cs" />
+    <Compile Include="System\Linq\Take.uap.cs" />
+    <Compile Include="$(CommonPath)\System\Collections\Generic\LargeArrayBuilder.uap.cs">
+      <Link>System\Collections\Generic\LargeArrayBuilder.uap.cs</Link>
+    </Compile>
+  </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp' or '$(TargetGroup)' == 'uap'">
     <Compile Include="$(CommonPath)\System\Collections\Generic\ArrayBuilder.cs">
       <Link>System\Collections\Generic\ArrayBuilder.cs</Link>
@@ -47,6 +78,8 @@
     <Compile Include="System\Linq\GroupJoin.cs" />
     <Compile Include="System\Linq\Intersect.cs" />
     <Compile Include="System\Linq\Iterator.cs" />
+    <Compile Include="System\Linq\IIListProvider.cs" />
+    <Compile Include="System\Linq\IPartition.cs" />
     <Compile Include="System\Linq\Join.cs" />
     <Compile Include="System\Linq\Last.cs" />
     <Compile Include="System\Linq\Lookup.cs" />
@@ -54,7 +87,6 @@
     <Compile Include="System\Linq\Min.cs" />
     <Compile Include="System\Linq\OrderBy.cs" />
     <Compile Include="System\Linq\OrderedEnumerable.cs" />
-    <Compile Include="System\Linq\Partition.cs" />
     <Compile Include="System\Linq\Range.cs" />
     <Compile Include="System\Linq\Repeat.cs" />
     <Compile Include="System\Linq\Reverse.cs" />
