Address code review comments including removing the old corert flavor that started to do something similar.

--- a/pkg/Microsoft.NETCore.Platforms/runtimeGroups.props
+++ b/pkg/Microsoft.NETCore.Platforms/runtimeGroups.props
@@ -141,11 +141,8 @@
       <Architectures>x64;x86;arm;arm64</Architectures>
       <Versions>7;8;81;10</Versions>
     </RuntimeGroup>
-
     <!-- add corert to all RIDs -->
-    <RuntimeGroupWithQualifiers Include="@(RuntimeGroup)">
-      <AdditionalQualifiers>%(AdditionalQualifiers);corert</AdditionalQualifiers>
-    </RuntimeGroupWithQualifiers>
+    <RuntimeGroupWithQualifiers Include="@(RuntimeGroup)" />
 
     <!-- root RIDs -->
     <RuntimeGroupWithQualifiers Include="base" />
@@ -155,9 +152,6 @@
 
     <!-- qualifier RIDs -->
     <RuntimeGroupWithQualifiers Include="aot">
-      <Parent>any</Parent>
-    </RuntimeGroupWithQualifiers>
-    <RuntimeGroupWithQualifiers Include="corert">
       <Parent>any</Parent>
     </RuntimeGroupWithQualifiers>
   </ItemGroup>
