--- a/src/System.Private.DataContractSerialization/src/System.Private.DataContractSerialization.csproj
+++ b/src/System.Private.DataContractSerialization/src/System.Private.DataContractSerialization.csproj
@@ -9,9 +9,9 @@
     <DebugSymbols>true</DebugSymbols>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DefineConstants>$(DefineConstants);FEATURE_SERIALIZATION</DefineConstants>
-    <DefineConstants Condition="'$(PackageTargetRuntimeSuffix)'=='aot'">$(DefineConstants);uapaot</DefineConstants>
+    <DefineConstants Condition="'$(TargetsAOT)'=='true'">$(DefineConstants);uapaot</DefineConstants>
     <!-- We do not want to block reflection for this assembly -->
-    <BlockReflectionAttribute Condition="'$(PackageTargetRuntimeSuffix)'=='aot'">false</BlockReflectionAttribute>
+    <BlockReflectionAttribute Condition="'$(TargetsAOT)'=='true'">false</BlockReflectionAttribute>
     <Configurations>netcoreapp-Debug;netcoreapp-Release;uap-Windows_NT-Debug;uap-Windows_NT-Release;uapaot-Windows_NT-Debug;uapaot-Windows_NT-Release</Configurations>
   </PropertyGroup>
   <PropertyGroup>
@@ -48,7 +48,7 @@
     <Compile Include="$(RuntimeSerializationSources)\Globals.cs" />
     <Compile Include="$(RuntimeSerializationSources)\GenericParameterDataContract.cs" />
     <Compile Include="$(RuntimeSerializationSources)\HybridObjectCache.cs" />
-    <Compile Include="$(RuntimeSerializationSources)\InvalidDataContract.cs" Condition="'$(PackageTargetRuntimeSuffix)'=='aot'" />
+    <Compile Include="$(RuntimeSerializationSources)\InvalidDataContract.cs" Condition="'$(TargetsAOT)'=='true'" />
     <Compile Include="$(RuntimeSerializationSources)\ObjectToIdCache.cs" />
     <Compile Include="$(RuntimeSerializationSources)\ObjectReferenceStack.cs" />
     <Compile Include="$(RuntimeSerializationSources)\PrimitiveDataContract.cs" />
@@ -72,7 +72,7 @@
     <Compile Include="$(RuntimeSerializationSources)\KnownTypeDataContractResolver.cs" />
     <Compile Include="$(RuntimeSerializationSources)\XmlObjectSerializerReadContextComplex.cs" />
     <Compile Include="$(RuntimeSerializationSources)\XmlObjectSerializerWriteContextComplex.cs" />
-    <Compile Include="$(RuntimeSerializationSources)\BitFlagsGenerator.cs" Condition="'$(PackageTargetRuntimeSuffix)'!='aot'" />
+    <Compile Include="$(RuntimeSerializationSources)\BitFlagsGenerator.cs" Condition="'$(TargetsAOT)'!='true'" />
     <Compile Include="$(RuntimeSerializationSources)\DataContractSurrogateCaller.cs" />
     <Compile Include="$(RuntimeSerializationSources)\DataContractSerializerExtensions.cs" />
     <Compile Include="$(RuntimeSerializationSources)\XmlSerializableServices.cs" />
@@ -137,7 +137,7 @@
     <Compile Include="$(JsonSources)\IXmlJsonWriterInitializer.cs" />
     <Compile Include="$(JsonSources)\ByteArrayHelperWithString.cs" />
     <Compile Include="$(JsonSources)\JsonEncodingStreamWrapper.cs" />
-    <Compile Include="$(JsonSources)\JsonFormatGeneratorStatics.cs" Condition="'$(PackageTargetRuntimeSuffix)'!='aot'" />
+    <Compile Include="$(JsonSources)\JsonFormatGeneratorStatics.cs" Condition="'$(TargetsAOT)'!='true'" />
     <Compile Include="System\Runtime\Serialization\AccessorBuilder.cs" />
     <Compile Include="$(CommonPath)\System\CodeDom\CodeTypeReference.cs" />
     <Compile Include="$(CommonPath)\System\CodeDom\CodeTypeReferenceCollection.cs" />
@@ -161,7 +161,7 @@
     <Compile Include="System\Xml\XmlCanonicalWriter.cs" />
     <Compile Include="System\Xml\XmlSigningNodeWriter.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(PackageTargetRuntimeSuffix)'=='aot'">
+  <ItemGroup Condition="'$(TargetsAOT)'=='true'">
     <EmbeddedResource Include="$(MsBuildThisFileDirectory)Resources\$(AssemblyName).rd.xml" />
   </ItemGroup>
   <ItemGroup>
