--- a/src/System.Linq.Expressions/src/System.Linq.Expressions.csproj
+++ b/src/System.Linq.Expressions/src/System.Linq.Expressions.csproj
@@ -8,16 +8,16 @@
     <ProjectGuid>{AEF718E9-D4FC-418F-A7AE-ED6B2C7B3787}</ProjectGuid>
     <AssemblyName>System.Linq.Expressions</AssemblyName>
     <RootNamespace>System.Linq.Expressions</RootNamespace>
-    <IsInterpreting Condition="'$(PackageTargetRuntimeSuffix)' == 'aot'">true</IsInterpreting>    
+    <IsInterpreting Condition="'$(TargetsAOT)'=='true'">true</IsInterpreting>    
     <!-- These defines are disabled on Aot due to https://github.com/dotnet/corefx/issues/29745 -->
-    <DefineConstants Condition="'$(PackageTargetRuntimeSuffix)' != 'aot'"> $(DefineConstants);FEATURE_DLG_INVOKE;FEATURE_FAST_CREATE</DefineConstants>    
+    <DefineConstants Condition="'$(TargetsAOT)'!='true'"> $(DefineConstants);FEATURE_DLG_INVOKE;FEATURE_FAST_CREATE</DefineConstants>    
     <DefineConstants Condition=" '$(IsInterpreting)' != 'true' ">$(DefineConstants);FEATURE_COMPILE</DefineConstants>
     <DefineConstants Condition=" '$(FeatureInterpret)' == 'true' ">$(DefineConstants);FEATURE_INTERPRET</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(PackageTargetRuntimeSuffix)'=='aot'">
+  <PropertyGroup Condition="'$(TargetsAOT)'=='true'">
     <DefineConstants>$(DefineConstants);FEATURE_DYNAMIC_DELEGATE</DefineConstants>
   </PropertyGroup>
-  <ItemGroup Condition="'$(PackageTargetRuntimeSuffix)'=='aot'">
+  <ItemGroup Condition="'$(TargetsAOT)'=='true'">
     <EmbeddedResource Include="Resources\$(AssemblyName).rd.xml" />
   </ItemGroup>
   <ItemGroup>
