--- a/src/System.Runtime.WindowsRuntime/ref/Configurations.props
+++ b/src/System.Runtime.WindowsRuntime/ref/Configurations.props
@@ -5,8 +5,8 @@
       netcoreapp;
     </PackageConfigurations>
     <BuildConfigurations>
+      $(PackageConfigurations);
       uap;
-      netcoreapp;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
