--- a/src/System.Runtime.WindowsRuntime/src/Configurations.props
+++ b/src/System.Runtime.WindowsRuntime/src/Configurations.props
@@ -5,9 +5,9 @@
       netcoreapp-Windows_NT;
     </PackageConfigurations>
     <BuildConfigurations>
+      $(PackageConfigurations);
       uap-Windows_NT;
       uapaot-Windows_NT;
-      netcoreapp-Windows_NT;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
