Add net461 & netcoreapp2.0 for System.Memory

--- a/external/binplacePackages/Configurations.props
+++ b/external/binplacePackages/Configurations.props
@@ -2,6 +2,7 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <BuildConfigurations>
+      net461;
       netfx;
       netstandard1.1;
       netstandard1.2;
@@ -11,6 +12,7 @@
       netstandard1.6;
       netstandard2.0;
       netstandard;
+      netcoreapp2.0;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
